View Issue Details

IDProjectCategoryView StatusLast Update
0023911Open CASCADEOCCT:Testspublic2014-11-12 09:51
Reporterapn Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.6.0 
Target Version6.8.0Fixed in Version6.8.0 
Summary0023911: Invalid output of command Xdump
DescriptionTests cases bugs/xde/bug23047_1 bug23047_2 provide incorrect result, because of invalid output of command Xdump.
Steps To ReproduceXNewDoc D
box b 1 1 1
ttranslate b 1 0 0
XAddShape D b
set info [Xdump D]
puts $info
TagsNo tags attached.
Test case numberbugs xde(005) bug23047_1, bug23047_2, bug23911

Activities

abv

2014-10-17 03:16

manager   ~0033237

Please check this issue; note that BAD status of test seems to be caused by wrong script (access to inexistent Tcl variable)

git

2014-10-20 16:11

administrator   ~0033341

Branch CR23911 has been created by apn.

SHA-1: 436ef4bdb0ea8b66dd66e6204570ed40e0cbee4b


Detailed log of new commits:

Author: apn
Date: Mon Oct 20 15:47:02 2014 +0400

    0023911: Invalid output of command Xdump

kgv

2014-10-20 16:18

developer   ~0033342

Dear apn,

> Branch CR23911 has been created by apn.
-    gp
+    gp,
+       Draw

please note that this is not applicable to create dependency of general-purpose toolkit (TKXCAF) from Draw Harness (TKDraw)

git

2014-10-21 18:16

administrator   ~0033511

Branch CR23911_1 has been created by apn.

SHA-1: 42c90463afb7b9734d2f930d82285cd400d2ccdd


Detailed log of new commits:

Author: apn
Date: Tue Oct 21 18:16:34 2014 +0400

    0023911: Invalid output of command Xdump
    
    Improved output of Xdump command using Draw_Interpretor.

apn

2014-10-21 18:19

administrator   ~0033513

Output of Xdump command was fixed in CR23911_1.
Test cases bugs/xde/bug23047_1 bug23047_2 were OK.
Please, review.

abv

2014-10-22 09:05

manager   ~0033523

The fix is incomplete, since function DumpShape() in XCAFDoc_ShapeTool still obviously dumps to cout. I suggest that instead of returning AsciiString the functions should be changed to accept Standard_OStream argument, when use std::stringstream for getting the dump string and drop it to Draw.

git

2014-10-22 12:31

administrator   ~0033539

Branch CR23911_1 has been updated by ski.

SHA-1: 9814268416acc92efff3ed9a4cbf9d3583914f93


Detailed log of new commits:

Author: ski
Date: Wed Oct 22 12:31:15 2014 +0400

    Improved output of Xdump command using Standard_SStream.

ski

2014-10-22 12:38

developer   ~0033540

All changes are located in branch CR23911_1.

Functions DumpShape(), Dump() and DumpAssembly() in XCAFDoc_ShapeTool were changed.

Output of command XDump is dropped to Draw.

Tests bugs / xde / bug23047_1 bug23047_2 are OK (unnecessary TODOs were removed).

ski

2014-10-22 12:38

developer   ~0033541

Please, review.

abv

2014-10-22 12:48

manager   ~0033542

Please use OStream instead of SStream in interfaces, this will allow using Dump...() functions on all streams, e.g. cout or file

git

2014-10-22 15:11

administrator   ~0033560

Branch CR23911_1 has been updated by ski.

SHA-1: 288f95a25f79021b925c76d381ecbc11164ff070


Detailed log of new commits:

Author: ski
Date: Wed Oct 22 15:10:52 2014 +0400

    OStream is used instead of SStream.

ski

2014-10-22 15:13

developer   ~0033561

Sorry for misunderstanding,

OStream is used instead of SStream.

Please, review.

abv

2014-10-22 15:24

manager   ~0033562

Reviewed, please test (low priority).

Sergey, do you really need statement "using std::stringstream;" in XDEDRAW.cxx? If not, please consider removing it.

git

2014-10-22 15:34

administrator   ~0033565

Branch CR23911_1 has been updated forcibly by ski.

SHA-1: 53ac602e6e8677dd1301896af6060b2e0162a779

mkv

2014-10-22 20:13

tester   ~0033595

Dear BugMaster,
Branch CR23911_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 53ac602e6e8677dd1301896af6060b2e0162a779

Number of compiler warnings:

occt component :
Linux: 15 (15 on master)
Windows: 0 (0 on master)
MacOS: 199 (199 on master)

products component :
Linux: 11 (11 on master)
Windows: 1 (1 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
http://occt-tests/CR23911-1-master-occt/Debian60-64/bugs/xde/bug23047_1.html
http://occt-tests/CR23911-1-master-occt/Windows-32-VC10/bugs/xde/bug23047_1.html
bugs xde(005) bug23047_1: OK

http://occt-tests/CR23911-1-master-occt/Debian60-64/bugs/xde/bug23047_2.html
http://occt-tests/CR23911-1-master-occt/Windows-32-VC10/bugs/xde/bug23047_2.html
bugs xde(005) bug23047_2: OK

http://occt-tests/CR23911-1-master-occt/Debian60-64/bugs/xde/bug23911.html
http://occt-tests/CR23911-1-master-occt/Windows-32-VC10/bugs/xde/bug23911.html
bugs xde(005) bug23911: OK

Testing on Linux:
occt component :
Total MEMORY difference: 368564396 / 368501252
Total CPU difference: 47344.880000000165 / 44540.45000000001
products component :
Total MEMORY difference: 125799008 / 126007340
Total CPU difference: 17510.559999999976 / 17464.659999999974

Testing on Windows:
occt component :
Total MEMORY difference: 253041280 / 252920188
Total CPU difference: 35242.671875 / 34934.96875
products component :
Total MEMORY difference: 82883008 / 70259448
Total CPU difference: 11138.609375 / 11333.1875

There are no differences in images found by testdiff.

git

2014-10-22 20:16

administrator   ~0033596

Branch CR23911_1 has been updated by mkv.

SHA-1: 307a3be5cf02ac1ec18bcca17cba71135c4cceda


Detailed log of new commits:

Author: mkv
Date: Wed Oct 22 20:16:20 2014 +0400

    Test cases for issue CR23911

git

2014-11-12 09:51

administrator   ~0034285

Branch CR23911 has been deleted by inv.

SHA-1: 436ef4bdb0ea8b66dd66e6204570ed40e0cbee4b

git

2014-11-12 09:51

administrator   ~0034286

Branch CR23911_1 has been deleted by inv.

SHA-1: 307a3be5cf02ac1ec18bcca17cba71135c4cceda

Related Changesets

occt: master 0cc44c47

2014-10-23 10:42:17

apn


Committer: bugmaster Details Diff
0023911: Invalid output of command Xdump

Improved output of Xdump command using Draw_Interpretor.

Improved output of Xdump command using Standard_SStream.

OStream is used instead of SStream.

Test cases for issue CR23911
Affected Issues
0023911
mod - src/XCAFDoc/XCAFDoc_ShapeTool.cdl Diff File
mod - src/XCAFDoc/XCAFDoc_ShapeTool.cxx Diff File
mod - src/XDEDRAW/XDEDRAW.cxx Diff File
mod - tests/bugs/xde/bug23047_1 Diff File
mod - tests/bugs/xde/bug23047_2 Diff File
add - tests/bugs/xde/bug23911 Diff File

Issue History

Date Modified Username Field Change
2013-04-18 15:50 apn New Issue
2013-04-18 15:50 apn Assigned To => mkv
2013-04-18 15:51 apn Test case number => bugs xde bug23047_1 23047_2
2013-04-18 15:52 apn Assigned To mkv => abv
2013-12-21 10:21 abv Target Version 6.7.0 => 6.7.1
2013-12-26 10:59 abv Assigned To abv => kgv
2014-01-08 14:20 kgv Assigned To kgv => gka
2014-04-04 18:19 abv Target Version 6.7.1 => 6.8.0
2014-10-17 03:16 abv Note Added: 0033237
2014-10-17 03:16 abv Assigned To gka => apn
2014-10-17 03:16 abv Status new => assigned
2014-10-20 16:11 git Note Added: 0033341
2014-10-20 16:18 kgv Note Added: 0033342
2014-10-21 18:16 git Note Added: 0033511
2014-10-21 18:19 apn Note Added: 0033513
2014-10-21 18:19 apn Assigned To apn => abv
2014-10-21 18:19 apn Status assigned => resolved
2014-10-22 09:05 abv Note Added: 0033523
2014-10-22 09:05 abv Assigned To abv => apn
2014-10-22 09:05 abv Status resolved => assigned
2014-10-22 12:31 git Note Added: 0033539
2014-10-22 12:38 ski Note Added: 0033540
2014-10-22 12:38 ski Note Added: 0033541
2014-10-22 12:38 ski Assigned To apn => abv
2014-10-22 12:38 ski Status assigned => resolved
2014-10-22 12:48 abv Note Added: 0033542
2014-10-22 12:48 abv Assigned To abv => ski
2014-10-22 12:48 abv Status resolved => assigned
2014-10-22 15:11 git Note Added: 0033560
2014-10-22 15:13 ski Note Added: 0033561
2014-10-22 15:13 ski Assigned To ski => abv
2014-10-22 15:13 ski Status assigned => resolved
2014-10-22 15:24 abv Note Added: 0033562
2014-10-22 15:24 abv Assigned To abv => bugmaster
2014-10-22 15:24 abv Status resolved => reviewed
2014-10-22 15:34 git Note Added: 0033565
2014-10-22 16:01 mkv Assigned To bugmaster => mkv
2014-10-22 20:13 mkv Note Added: 0033595
2014-10-22 20:14 mkv Test case number bugs xde bug23047_1 23047_2 => bugs xde(005) bug23047_1, bug23047_2, bug23911
2014-10-22 20:14 mkv Assigned To mkv => bugmaster
2014-10-22 20:14 mkv Status reviewed => tested
2014-10-22 20:16 git Note Added: 0033596
2014-10-24 15:38 bugmaster Changeset attached => occt master 0cc44c47
2014-10-24 15:38 bugmaster Status tested => verified
2014-10-24 15:38 bugmaster Resolution open => fixed
2014-11-11 12:43 aiv Fixed in Version => 6.8.0
2014-11-11 13:02 aiv Status verified => closed
2014-11-12 09:51 git Note Added: 0034285
2014-11-12 09:51 git Note Added: 0034286